SUBDIRS = \
	autotools \
	autotools-templates \
	beautifier \
	build-tools \
	c-pack \
	cargo \
	clang \
	color-picker \
	command-bar \
	comment-code \
	create-project \
	ctags \
	devhelp \
	file-search \
	flatpak \
	fpaste \
	gcc \
	gettext \
	git \
	gnome-code-assistance \
	hello-cpp \
	html-completion \
	html-preview \
	jedi \
	jhbuild \
	mingw \
	meson \
	meson-templates \
	project-tree \
	python-gi-imports-completion \
	python-pack \
	quick-highlight \
	rust-langserv \
	support \
	symbol-tree \
	sysmon \
	sysprof \
	terminal \
	todo \
	vala-pack \
	xml-pack \
	$(NULL)

EXTRA_DIST = Makefile.plugin

-include $(top_srcdir)/git.mk
