SUBDIRS =                            \
	autotools                    \
	autotools-templates          \
	beautifier                   \
	c-pack                       \
	cargo                        \
	clang                        \
	cmake                        \
	color-picker                 \
	command-bar                  \
	comment-code                 \
	create-project               \
	ctags                        \
	devhelp                      \
	file-search                  \
	flatpak                      \
	fpaste                       \
	gcc                          \
	gettext                      \
	git                          \
	gnome-code-assistance        \
	html-completion              \
	html-preview                 \
	jedi                         \
	jhbuild                      \
	make                         \
	mingw                        \
	meson                        \
	meson-templates              \
	project-tree                 \
	python-gi-imports-completion \
	python-pack                  \
	quick-highlight              \
	rust-langserv                \
	rustup                       \
	support                      \
	symbol-tree                  \
	sysmon                       \
	sysprof                      \
	terminal                     \
	todo                         \
	vala-pack                    \
	valgrind                     \
	xml-pack                     \
	$(NULL)

EXTRA_DIST = Makefile.plugin

-include $(top_srcdir)/git.mk
