SUBDIRS =                            \
	autotools                    \
	autotools-templates          \
	beautifier                   \
	c-pack                       \
	cargo                        \
	clang                        \
	cmake                        \
	color-picker                 \
	command-bar                  \
	comment-code                 \
	create-project               \
	ctags                        \
	devhelp                      \
	eslint                       \
	file-search                  \
	flatpak                      \
	fpaste                       \
	gcc                          \
	gdb                          \
	gettext                      \
	git                          \
	gnome-code-assistance        \
	html-completion              \
	html-preview                 \
	jedi                         \
	jhbuild                      \
	make                         \
	meson                        \
	meson-templates              \
	mingw                        \
	mono                         \
	phpize                       \
	project-tree                 \
	python-gi-imports-completion \
	python-pack                  \
	quick-highlight              \
	retab                        \
	rust-langserv                \
	rustup                       \
	support                      \
	symbol-tree                  \
	sysmon                       \
	sysprof                      \
	terminal                     \
	todo                         \
	vala-pack                    \
	valgrind                     \
	xml-pack                     \
	$(NULL)

EXTRA_DIST = Makefile.plugin

-include $(top_srcdir)/git.mk
