plugindir = join_paths(get_option('libdir'), 'gnome-builder/plugins')
plugindatadir = join_paths(get_option('datadir'), 'gnome-builder/plugins')
plugin_deps = [
  libpeas_dep,
  libide_plugin_dep,
]

plugin_link_deps = join_paths(meson.current_source_dir(), 'plugins.map')
plugin_link_args = [
  '-Wl,--version-script,' + plugin_link_deps,
]

subdir('autotools')
subdir('autotools-templates')
subdir('beautifier')
subdir('c-pack')
subdir('cargo')
subdir('clang')
subdir('cmake')
subdir('color-picker')
subdir('command-bar')
subdir('comment-code')
subdir('create-project')
subdir('ctags')
subdir('devhelp')
subdir('eslint')
subdir('file-search')
subdir('flatpak')
subdir('fpaste')
subdir('gcc')
subdir('gdb')
subdir('gettext')
subdir('git')
subdir('gnome-code-assistance')
subdir('html-completion')
subdir('html-preview')
subdir('jedi')
subdir('jhbuild')
subdir('make')
subdir('meson')
subdir('meson-templates')
subdir('mingw')
subdir('mono')
subdir('phpize')
subdir('project-tree')
subdir('python-gi-imports-completion')
subdir('python-pack')
subdir('quick-highlight')
subdir('retab')
subdir('rust-langserv')
subdir('rustup')
subdir('support')
subdir('symbol-tree')
subdir('sysmon')
subdir('sysprof')
subdir('terminal')
subdir('todo')
subdir('vala-pack')
subdir('valgrind')
subdir('xml-pack')
