i18n.gettext('gnome-builder',
  preset: 'glib',
  args: [
    '--msgid-bugs-address=https://gitlab.gnome.org/GNOME/gnome-builder/issues',
  ],
  data_dirs: [
    join_paths(meson.project_source_root(), 'src/plugins/color-picker/gstyle/data'),
    join_paths(meson.project_source_root(), 'data/styles')
  ],
)
